--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,34 @@
-<p>home works!</p>
+<table mat-table [dataSource]="recipes" class="mat-elevation-z8 recipes-table">
+  <caption>Recipes</caption>
+  <ng-container matColumnDef="recipe-name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let recipe"> {{ recipe.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="recipe-author">
+    <th mat-header-cell *matHeaderCellDef>Written by</th>
+    <td mat-cell *matCellDef="let recipe"> {{ recipe.author }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="recipe-number-of-ingredients">
+    <th mat-header-cell *matHeaderCellDef>Ingredients</th>
+    <td mat-cell *matCellDef="let recipe"> {{ recipe.numberOfIngredients }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="recipe-skill-level">
+    <th mat-header-cell *matHeaderCellDef>Difficulty</th>
+    <td mat-cell *matCellDef="let recipe"> {{ recipe.skillLevel }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<div>
+  <h1><b>Page number: {{ pageNumber }} / {{numberPages}} </b></h1>
+  <button mat-icon-button (click)="fetchPage(pageNumber - 1)">
+    <mat-icon>navigate_before</mat-icon>
+  </button>
+  <button mat-icon-button (click)="fetchPage(pageNumber + 1)">
+    <mat-icon>navigate_next</mat-icon>
+  </button>
+</div>
