--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,34 +1,57 @@
-<table mat-table [dataSource]="recipes" class="mat-elevation-z8 recipes-table">
-  <caption>Recipes</caption>
-  <ng-container matColumnDef="recipe-name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let recipe"> {{ recipe.name }}</td>
-  </ng-container>
+<h1 class="title">Recipes {{author}}</h1>
+<div class="search-bar-filter">
+  <form class="input-bar" (ngSubmit)="search()" *ngIf="searchKey === ''">
+    <mat-form-field>
+      <mat-label> Search</mat-label>
+      <input matInput name="search" [(ngModel)]="searchBox">
+    </mat-form-field>
+    <button class="search-button" type="submit" mat-flat-button color="accent">Search</button>
+  </form>
+  <div class="input-separator"></div>
+  <form class="input-bar" (ngSubmit)="filterIngredients()" *ngIf="filterItems !== ''">
+    <mat-form-field>
+      <mat-label> Ingredients </mat-label>
+      <mat-select [(ngModel)]="selectOptions" name="filter" multiple>
+        @for (ingredient of ingredients; track ingredient) {
+          <mat-option [value]="ingredient"> {{ingredient}} </mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
+    <button class="search-button" type="submit" mat-flat-button color="accent">Filter</button>
+  </form>
+</div>
+<div class="content">
+  <table mat-table [dataSource]="recipes" class="mat-elevation-z8 recipes-table">
+    <ng-container matColumnDef="recipe-name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let recipe"> {{ recipe.name }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="recipe-author">
-    <th mat-header-cell *matHeaderCellDef>Written by</th>
-    <td mat-cell *matCellDef="let recipe"> {{ recipe.author }}</td>
-  </ng-container>
+    <ng-container matColumnDef="recipe-author">
+      <th mat-header-cell *matHeaderCellDef>Written by</th>
+      <td mat-cell *matCellDef="let recipe" (click)="getAuthorRecipe(recipe.author)"> {{ recipe.author }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="recipe-number-of-ingredients">
-    <th mat-header-cell *matHeaderCellDef>Ingredients</th>
-    <td mat-cell *matCellDef="let recipe"> {{ recipe.numberOfIngredients }}</td>
-  </ng-container>
+    <ng-container matColumnDef="recipe-number-of-ingredients">
+      <th mat-header-cell *matHeaderCellDef>Ingredients</th>
+      <td mat-cell *matCellDef="let recipe"> {{ recipe.numberOfIngredients }}</td>
+    </ng-container>
 
-  <ng-container matColumnDef="recipe-skill-level">
-    <th mat-header-cell *matHeaderCellDef>Difficulty</th>
-    <td mat-cell *matCellDef="let recipe"> {{ recipe.skillLevel }}</td>
-  </ng-container>
+    <ng-container matColumnDef="recipe-skill-level">
+      <th mat-header-cell *matHeaderCellDef>Difficulty</th>
+      <td mat-cell *matCellDef="let recipe"> {{ recipe.skillLevel }}</td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openRecipeDialog(row.name)"></tr>
-</table>
-<div>
-  <h1><b>Page number: {{ pageNumber }} / {{numberPages}} </b></h1>
-  <button mat-icon-button (click)="fetchPage(pageNumber - 1)">
-    <mat-icon>navigate_before</mat-icon>
-  </button>
-  <button mat-icon-button (click)="fetchPage(pageNumber + 1)">
-    <mat-icon>navigate_next</mat-icon>
-  </button>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openRecipeDialog(row.name)"></tr>
+  </table>
+  <div class="footer-buttons">
+    <h1><b>Page number: {{ pageNumber }} / {{ numberOfPages }}</b></h1>
+    <button class="footer-button" mat-icon-button (click)="fetchPage(pageNumber - 1)" [disabled]="pageNumber === 1">
+      <mat-icon>navigate_before</mat-icon>
+    </button>
+    <button class="footer-button" mat-icon-button (click)="fetchPage(pageNumber + 1)" [disabled]="pageNumber === numberOfPages">
+      <mat-icon>navigate_next</mat-icon>
+    </button>
+  </div>
 </div>
