--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -11,6 +11,7 @@ table {
 .title {
   text-align: center;
   font-size: 48px;
+  color: white;
 }
 
 .search-bar-filter {
@@ -43,6 +44,7 @@ mat-form-field {
 .footer-button {
   margin-top: 15px;
   margin-left: 30px;
+  color: white;
 }
 
 .input-separator {
